--- a/nhom5WebApp_LapTopShop/src/main/webapp/WEB-INF/View/admin/dashboard/show.html
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/WEB-INF/View/admin/dashboard/show.html
@@ -3,7 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="container-fluid px-4">
+        <h1>Dashboard</h1>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Thống kê</li>
+        </ol>
+        <div class="row">
+          <div class="col-xl-4 col-md-6">
+            <div class="card bg-primary text-white mt-4">
+              <div class="card-body">Số lượng user</div>
+              <div class="card-footer">
+                <a class="small text-white" href="#">View Details</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-md-6">
+            <div class="card bg-warning text-white mt-4">
+              <div class="card-body">Số lượng Product</div>
+              <div class="card-footer">
+                <a class="small text-white" href="#">View Details</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-md-6">
+            <div class="card bg-success text-white mt-4">
+              <div class="card-body">Số lượng order</div>
+              <div class="card-footer">
+                <a class="small text-white" href="#">View Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
