--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -22,11 +22,6 @@ body {
   align-items: center;
 }
 
-.usert {
-  font-size: 30px;
-  margin-left: 8px;
-}
-
 .h_menu {
   margin-left: 100px;
 }
@@ -113,4 +108,34 @@ body {
   position: absolute;
   bottom: 10%;
   left: 50%;
+}
+.avatar{
+  margin-right: 15px;
+}
+.usert {
+  position: relative;
+  font-size: 30px;
+  margin-left: 8px;
+  cursor: pointer;
+}
+.usert:hover .admin-action{
+  display: block;
+}
+.admin-action{
+  display: none;
+  position: absolute;
+  top: 60px;
+  left: -110px;
+  width: 150px;
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+}
+.admin-action::before{
+  content: "";
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid #fff;
+  position: absolute;
+  top: -20px;
+  right: 5px;
 }
