--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -15,6 +15,7 @@ body {
   align-items: center;
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 .uses,
 .menu {
@@ -86,11 +87,11 @@ body {
   color: rgb(114, 104, 104);
   height: 50px;
   position: absolute;
-  left: 12%;
+  left: 0;
   bottom: 0;
   background: rgb(223, 216, 216);
   align-items: center;
-  width: 88%;
+  width: 100%;
 }
 .ch {
   display: flex;
@@ -102,6 +103,8 @@ body {
   width: 88%;
   margin-left: 12%;
   padding-top: 60px;
+  position: relative;
+  padding-bottom: 60px;
 }
 
 .pst-pagination {
