update view user

--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -142,3 +142,13 @@ body {
   top: -20px;
   right: 5px;
 }
+/* cuowng */
+.container-create-product{
+  width: 800px;
+      margin: auto;
+}
+.container-view-user{
+  width: 800px;
+  margin: auto;
+}
+/* cuowng */
