--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -87,11 +87,11 @@ body {
   color: rgb(114, 104, 104);
   height: 50px;
   position: absolute;
-  left: 0;
+  left: 12%;
   bottom: 0;
   background: rgb(223, 216, 216);
   align-items: center;
-  width: 100%;
+  width: 88%;
 }
 .ch {
   display: flex;
@@ -103,7 +103,6 @@ body {
   width: 88%;
   margin-left: 12%;
   padding-top: 60px;
-  position: relative;
   padding-bottom: 60px;
 }
 
