--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -23,11 +23,6 @@ body {
   align-items: center;
 }
 
-.usert {
-  font-size: 30px;
-  margin-left: 8px;
-}
-
 .h_menu {
   margin-left: 100px;
 }
@@ -72,11 +67,11 @@ body {
 }
 .sidebar ul li a {
   text-decoration: none;
-  color: rgb(172, 181, 189);
+  color: rgb(189, 189, 189);
 }
 .sidebar ul:nth-child(1) {
   font-size: 16px;
-  color: rgb(103, 112, 112);
+  color: rgb(143, 143, 143);
 }
 .th {
   background-color: rgb(190, 184, 184);
@@ -92,11 +87,11 @@ body {
   color: rgb(114, 104, 104);
   height: 50px;
   position: absolute;
-  left: 12%;
+  left: 0;
   bottom: 0;
   background: rgb(223, 216, 216);
   align-items: center;
-  width: 88%;
+  width: 100%;
 }
 .ch {
   display: flex;
@@ -108,6 +103,7 @@ body {
   width: 88%;
   margin-left: 12%;
   padding-top: 60px;
+  position: relative;
   padding-bottom: 60px;
 }
 
