--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -120,3 +120,40 @@ footer h4 {
 .list p {
   font-weight: lighter;
 }
+/* homepage */
+.product {
+  /* box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3); */
+  height: 400px;
+  position: relative;
+}
+.product:hover {
+  border: 1px solid orange !important;
+}
+.label {
+  position: absolute;
+  top: 9px;
+  left: 9px;
+  font-size: 12px;
+}
+.product-img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+.product-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: 0.2s;
+}
+.product img:hover {
+  transform: scale(1.2);
+}
+.fs-7 {
+  font-size: 14px;
+}
+.content {
+  margin: 80px;
+}
