--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: rgb(125, 189, 6);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -119,4 +123,55 @@ footer h4 {
 }
 .list p {
   font-weight: lighter;
+}
+.content {
+  margin: 80px;
+}
+.text-color-primary {
+  color: var(--primary-color);
+}
+.cart-img {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+}
+.btn-quantity {
+  height: 30px;
+  width: 30px;
+  border: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.quantity {
+  outline: none;
+  border: none;
+  width: 30px;
+  text-align: center;
+}
+.btn-cancel {
+  height: 30px;
+  width: 30px;
+  border: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: red;
+}
+.order-info {
+  background-color: rgb(242, 245, 247);
+  width: 70%;
+  padding: 20px 10px;
+  border-radius: 5px;
+}
+.product-list {
+  height: 500px;
+  overflow-y: auto;
+}
+.product-list th {
+  position: sticky;
+  top: 0;
 }
