--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -1,7 +1,9 @@
 :root {
   --primary-color: rgb(125, 189, 6);
 }
-
+.text-color-primary {
+  color: var(--primary-color);
+}
 * {
   margin: 0;
   padding: 0;
@@ -127,9 +129,6 @@ footer h4 {
 .content {
   margin: 80px;
 }
-.text-color-primary {
-  color: var(--primary-color);
-}
 .cart-img {
   height: 80px;
   width: 80px;
@@ -174,4 +173,23 @@ footer h4 {
 .product-list th {
   position: sticky;
   top: 0;
+}
+.checkout-content {
+  width: 45%;
+}
+#total-pay {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  text-align: right;
+}
+.form-checkout span {
+  display: block;
+  margin-top: 5px;
+}
+.form-error {
+  color: red;
+}
+.form-error input {
+  border: 1px solid red;
 }
