--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -146,3 +146,16 @@ body {
   width: 50px;
   height: 50px;
 }
+.form-error span {
+  color: red;
+  font-size: 14px;
+}
+.form-error input {
+  border: 1px solid red;
+}
+.form-error textarea {
+  border: 1px solid red;
+}
+.form-error select {
+  border: 1px solid red;
+}
