--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -182,6 +182,23 @@ footer h4 {
   background-color: green; /* Màu nền xanh khi checkbox được chọn */
   border-color: green;     /* Viền xanh cho checkbox khi chọn */
 }
+.login-form{
+  width: 600px;
+  margin: auto;
+  margin-top: 20px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 30px;
+}
+.register-form{
+  width: 800px;
+  margin: auto;
+  margin-top: 20px;
+  background-color: white;
+  padding: 10px 10px;
+  border-radius: 30px
+
+}
 
 
 
