--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -5,6 +5,15 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+.header {
   height: 50px;
   align-items: center;
   display: flex;
@@ -58,6 +67,7 @@ i {
     rgb(123, 183, 253) 100.2%
   );
   height: 350px;
+  margin-top: 50px;
 }
 .t-banner {
   margin: 0 130px;
