--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/css/styles.css
@@ -6,7 +6,7 @@
 body {
   height: 100vh;
 }
-.header {
+header {
   justify-content: space-between;
   display: flex;
   background: black;
@@ -16,6 +16,11 @@ body {
   position: fixed;
   width: 100%;
   z-index: 10;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
 }
 .uses,
 .menu {
