--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -23,13 +23,13 @@ header {
   padding: 0 80px;
 }
 .t a:first-child {
-  color: rgb(112, 235, 30);
+  color: rgb(122, 215, 60);
   font-size: 30px;
   font-weight: 500;
 }
 .t a:nth-child(2) {
   margin-left: 80px;
-  color: rgb(71, 243, 14);
+  color: silver;
 }
 .t a:nth-child(3) {
   margin-left: 50px;
@@ -46,7 +46,7 @@ a {
   text-decoration: none;
 }
 i {
-  color: rgb(54, 244, 17);
+  color: rgb(25, 141, 2);
   margin: 0 10px;
 }
 .carousel {
@@ -108,9 +108,9 @@ svg {
   color: white;
 }
 .feature {
-  margin: 20px 50px;
+  margin: 0px 50px 40px 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 footer {
   height: 250px;
