--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -5,6 +5,15 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+.header {
   height: 50px;
   align-items: center;
   display: flex;
@@ -58,6 +67,7 @@ i {
     rgb(123, 183, 253) 100.2%
   );
   height: 350px;
+  margin-top: 50px;
 }
 .t-banner {
   margin: 0 130px;
@@ -84,6 +94,7 @@ i {
   padding: 5px 20px;
   background: rgb(239, 231, 231);
   text-align: center;
+  border-radius: 10px;
 }
 .box-icon {
   width: 100px;
@@ -97,7 +108,7 @@ svg {
   color: white;
 }
 .feature {
-  margin: 0 50px;
+  margin: 20px 50px;
   display: flex;
   justify-content: space-between;
 }
@@ -120,127 +131,81 @@ footer h4 {
 .list p {
   font-weight: lighter;
 }
-/* Cuowq */
-.container-client-product{
-  margin: 40px;
-}
-.client-product{
-  
-  display: flex;
-}  
-.form-filter{
-  display: flex;
-  flex-wrap: wrap;
-  
-}
-.client-product-filtering{
-  width: 40%;
-  
-}
-.form-check{
-  margin-right: 20px;
-  margin-bottom: 10px;
-}
-.form-check label{
-  opacity: 0.7;
-}                   
-.client-product-content{
- width: 60%;
-}
-.client-product-filtering p{
-  margin-bottom: 10px;
-  text-decoration: dashed;
-}
-
-.pagination .page-link:hover {
-  background-color: rgb(113, 192, 30);  
-  border-color: rgb(197, 176, 38);    
-  color: white;            
-}
-
-.pagination .page-item .page-link {
-  
-  border-color: yellow;     
-  color: rgb(65, 137, 16);
-}
-
-.pagination .page-item.disabled .page-link {
-  color: gray;             
-  pointer-events: none;      
-}
-.custom-btn {
-  border-color: rgb(238, 242, 23); 
-  color: rgb(65, 137, 16);       
-}
-
-.custom-btn:hover {
-  background-color: rgb(113, 192, 30); 
-  color: white;       
-}
-/* Thay đổi màu nền của checkbox khi được chọn */
-.form-check-input:checked {
-  background-color: green; /* Màu nền xanh khi checkbox được chọn */
-  border-color: green;     /* Viền xanh cho checkbox khi chọn */
-}
-.login-form{
-  width: 600px;
-  margin: auto;
-  margin-top: 20px;
-  background-color: white;
-  padding: 10px;
-  border-radius: 30px;
-}
-.register-form{
-  width: 800px;
-  margin: auto;
-  margin-top: 20px;
-  background-color: white;
-  padding: 10px 10px;
-  border-radius: 30px
-
-}
-
-
-
-
-/* Cuowq */
-
-
-
-/* homepage */
-.product {
-  /* box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3); */
-  height: 400px;
+.header-cart {
   position: relative;
 }
-.product:hover {
-  border: 1px solid orange !important;
-}
-.label {
+.header-cart-number {
+  background-color: orange;
+  border-radius: 50%;
+  color: #000;
+  display: block;
+  font-size: 13px;
+  width: 18px;
+  height: 18px;
+  text-align: center;
   position: absolute;
-  top: 9px;
-  left: 9px;
-  font-size: 12px;
+  top: 2px;
+  right: 2px;
 }
-.product-img {
-  width: 100%;
-  height: 50%;
-  object-fit: cover;
-  object-position: center;
+.header-user {
+  position: relative;
+  margin-left: 10px;
 }
-.product-img img {
+.header-user:hover .header-user-box {
+  display: block;
+}
+
+.header-user-box {
+  position: absolute;
+  top: 50px;
+  width: 300px;
+  right: -15px;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+  z-index: 10;
+  transition: 0.3s;
+  animation: appear 0.3s linear;
+  display: none;
+}
+.header-user-box::before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  right: 20px;
+  display: block;
+  width: 0;
+  height: 0;
+  border-bottom: 20px solid #fff;
+  border-right: 20px solid transparent;
+  border-left: 20px solid transparent;
+}
+.user-avatar {
+  height: 80px;
+  width: 80px;
+}
+.user-avatar img {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
   object-fit: cover;
   object-position: center;
-  transition: 0.2s;
 }
-.product img:hover {
-  transform: scale(1.2);
+.user-action a:hover,
+.user-signout a:hover {
+  color: #338c00 !important;
 }
-.fs-7 {
-  font-size: 14px;
-}
-.content {
-  margin: 80px;
+
+@keyframes appear {
+  from {
+    transform: scale(0);
+    transform-origin: 90% top;
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    transform-origin: 90% top;
+    opacity: 1;
+  }
 }
