--- a/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
+++ b/nhom5WebApp_LapTopShop/src/main/webapp/resources/client/css/style.css
@@ -378,3 +378,5 @@ footer h4 {
   background-color: green; /* Màu nền xanh khi checkbox được chọn */
   border-color: green; /* Viền xanh cho checkbox khi chọn */
 }
+
+/* cart */
